<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.informations.InformationScreen"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/tv_name_surname_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_32sdp"
        android:layout_gravity="center"
        android:textSize="@dimen/_16ssp"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_mail"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_36sdp"
        android:layout_marginTop="@dimen/_48sdp"
        android:layout_gravity="center"
        android:hint="@string/mail_info"
        android:inputType="text"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_phone"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_36sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_gravity="center"
        android:hint="@string/phone_number"
        android:inputType="phone"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_city"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_36sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_12sdp"
        android:inputType="text"
        android:hint="@string/city"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_info"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_48sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:textSize="@dimen/_16ssp"
        android:text="@string/next"
        android:layout_gravity="center"
        />

</LinearLayout>